--- a/client/Views/App/category/listing.html
+++ b/client/Views/App/category/listing.html
@@ -1,4 +1,4 @@
-<template name="listing">
+<template name="listing12345">
 	{{> myrefine}}
 	<div class="container">
 		<div class="col-md-12">
@@ -38,4 +38,7 @@
 	</div>
 	<a class="more">{{_"Load More"}}</a>
 
+</template>
+<template name="listing">
+	
 </template>
