--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -61,7 +61,7 @@
 
 								  <span class="input-group-addon all-btn slide-toggle" id="btn-all"><i class="fa fa-bars"></i></span>
 
-								  <input class="form-control input-search " placeholder='{{_ "Search for..."}}' type="text" id="textToSearch">
+								  <input class="form-control input-search " placeholder='{{_ "See it..."}}' type="text" id="textToSearch">
 
 								  <span class="input-group-addon search-btn kesearch"><i class="fa fa-search search-font"></i></span>
 								</div>
