--- a/client/Views/App/headerHome.html
+++ b/client/Views/App/headerHome.html
@@ -44,7 +44,7 @@
 								</div>
 							</form>-->
 							<div class="input-group">
-								<input class="form-control" placeholder="{{_ 'Search for...'}}" type="text">
+								<input class="form-control" placeholder="{{_ 'Search for vann pisey...'}}" type="text">
 								<span class="input-group-btn">
 									<button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
 								</span>
