get new version

--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -158,7 +158,7 @@
 	<section id="menu-wrapper">
 
         <div id="menu-search">
-        	<input id="menu-search-input-text" type="text" placeholder="Search..." />
+        	<input id="menu-search-input-text" type="text" placeholder="Search pisey in here..." />
 			<input id="menu-search-input-submit" type="submit" value="" />
         </div>
 
