--- a/public/css/custom_layout.css
+++ b/public/css/custom_layout.css
@@ -2,7 +2,9 @@
     outline: 0;
     outline-offset: -2px;
 }
-
+.nonelike{
+    display: none;
+}
 #a-sidebar {
     width: 60px;
     height: 30px;
