--- a/client/Views/App/tuto/tutodetails.html
+++ b/client/Views/App/tuto/tutodetails.html
@@ -15,7 +15,13 @@
 							</div>
 							<div class="text-center">
 								<label class="pull-right">
-									<img src="img/heart-image.png">
+								<a href="#" id="unlike">
+										<img src="/img/heart-image.png"  id="unlike{{_id}}">
+									</a>
+									<a href="#" id="like">
+										<img src="/img/full-heart.png" id="like{{_id}}" class="nonelike">
+									</a>
+									<!-- <img src="/img/heart-image.png"> -->
 									<span>132 personnent aiment</span>
 								</label>
 								<label>
