--- a/client/Views/App/login/login.html
+++ b/client/Views/App/login/login.html
@@ -10,6 +10,7 @@
                             <a href="/register"><button id="registerTop">Register</button></a>
                         </div>
                         <form class="form-horizontal mar-log" id="UserLogin">
+                            <p id="loginError" style="color:red"></p>
                             <div class="control-group">
                                 <label class="control-label" for="inputEmail">Username</label>
                                 <div class="controls">
