--- a/client/Views/App/login/register.html
+++ b/client/Views/App/login/register.html
@@ -10,47 +10,65 @@
 	                            <a href="/register"><button id="registerTop">Register</button></a>
 	                        </div>
 	                        <form class="control-group">
+	                       <!--  <div class="register_msg" style="margin-top:10px;color:red"></div> -->
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">Username</label>
 	                                <div class="controls">
 	                                    <input type="text" id="uname" placeholder="">
 	                                </div>
+	                                <p class="error_username" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">First name</label>
 	                                <div class="controls">
 	                                    <input class="short" type="text" id="fname" placeholder="">
 	                                </div>
+	                                <p class="error_firstname" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">Last name</label>
 	                                <div class="controls">
 	                                    <input class="short" type="text" id="lname" placeholder="">
 	                                </div>
+	                                <p class="error_lastname" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">Pays</label>
 	                                <div class="controls">
 	                                    <input class="short" type="text" id="pays" placeholder="">
 	                                </div>
+	                                <p class="error_pays" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">Ville</label>
 	                                <div class="controls">
 	                                    <input class="short" type="text" id="ville" placeholder="">
 	                                </div>
+	                                <p class="error_ville" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">Email</label>
 	                                <div class="controls">
-	                                    <input type="text" id="email" placeholder="">
+	                                    <input type="text" id="email" placeholder="" required pattern="[^ @]*@[^ @]*">
+
 	                                </div>
+	                                <p class="error_email" style="margin-top:10px;color:red"></p>
 	                            </div>
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputPassword">Password</label>
 	                                <div class="controls">
-	                                    <input type="password" id="password" placeholder="">
+	                                    <input type="password" class="reg-password" id="password" placeholder="">
 	                                </div>
+	                                <p class="error_password" style="margin-top:10px;color:red"></p>
+	                            <label class="control-label" for="inputPassword">Confirm Password</label>
+	                                <div class="controls">
+	                                    <input type="password" class="reg-conpassword" id="con_password" placeholder="">
+	                                </div>
+	                                <p class="error_conpassword" style="margin-top:10px;color: red"></p>
+	                                <div id="pass-info"></div>
+										<div class="alert alert-warning">
+											<strong>{{_"Your password should be at least 6 characters and contain a capital letter and one lowercase letter"}}</strong>
+										</div>
 	                            </div>
 	                            <div class="control-group">
 	                                <div class="controls">
