left menu & brand

--- a/client/Views/App/mainLayout.html
+++ b/client/Views/App/mainLayout.html
@@ -1,6 +1,6 @@
 <template name="mainLayoutMobile">
     <section id="page-wrapper">
-        {{> headerMo}}
+        {{> headermenu}}
         <section id="content-wrapper">
             <section id="header">
                 <div id="header-left">
@@ -8,7 +8,7 @@
                     <a href="#" id="a-shoping"><img src="/img/icons/shoping-01.png" alt="menu" /></a>
                 </div>
                 <div id="header-title">
-                    <h1><img src="/img/icons/logo-01.png" /></h1>
+                    <a href="/"><h1><img src="/img/icons/logo-01.png" /></h1></a>
                 </div>
                 <div id="header-right">
                     <a href="#" id="a-sidebar">REFINE</a>
