--- a/public/css/price_range_custom.css
+++ b/public/css/price_range_custom.css
@@ -71,6 +71,8 @@
     padding: 15px;
     background: #333333;
     height: 250px;
+    /* KA */
+    margin-right: 15px;
 }
 
 /* panel advanced */
