--- a/public/css/profile_1.css
+++ b/public/css/profile_1.css
@@ -102,14 +102,14 @@
 	width: 80px;
     height:80px;
     border: 5px solid #000;
-    padding: 10px 10px;
+    padding-top: 29px;
     border-radius:50%;
     margin: auto;
 }
 .div-circle p{
 	text-align:center; 
 	vertical-align: center;
-	font-size: 36px;
+	font-size: 12px;
 	font-weight: bold;
 }
 
