--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -1,15 +1,17 @@
 <template name="details">
 	<article>
-          <section class="shadow_bottom" id="produst_listing" dir="{{getDirection}}">
+          <section class="shadow_bottom" dir="{{getDirection}}">
             <div class="wrapper">
                 <div class="row">
                   <div class="col-sm-12">
-                    <h1>page detail </h1>
                     <h3 class="pull-right">{{title}}</h3>
                   </div>
                   <div class="test_color">
-                    <div class="choose_color">
-                         <p>{{#each getParentAttr oldId}}
+                    <div class="choose_color">COLOR</div>
+                    <div>SIZE</div>
+                    <a id="show_image">Show Image</a>
+                          <p id="my_images" style="display:none;">
+                          {{#each getParentAttr oldId}}
                       {{#with getParentDetails parent}}
                       {{name}} :
 
@@ -27,6 +29,32 @@
                         {{/with}}
                         {{/each}}
                       </p>
+                        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+                        <script>
+                           $(document).ready(function(){
+                              $('#show_image').on("click", function(){
+                                 $('#my_images').toggle();
+                              });
+                           });
+                        </script>
+                         <!-- <p>{{#each getParentAttr oldId}}
+                      {{#with getParentDetails parent}}
+                      {{name}} :
+
+                      <div id="gallerycontainer">
+                        <div id="gallery" >
+                          {{#each getAllAttributes ../product _id}}
+                          <p style="margin:17px;"><a href=""><img src="{{getImg productImage}}" id="img_attr"
+                            class="img-responsive pull-left" width="50px" height="50px" alt="{{title}}"></a></p>
+                            {{else}}
+                            <p><i>{{_ "None"}}</i></p>
+
+                            {{/each}}
+                          </div>
+                        </div>
+                        {{/with}}
+                        {{/each}}
+                      </p> -->
                     </div>
                   </div>
                   <div class="space-top-detail1">
@@ -45,121 +73,60 @@
                     </div>
                  </div>
                 </div>
-            </div>
+          
            </section>
            <section id="produst_listing" class="shadow_bottom" dir="{{getDirection}}">
             <div class="wrapper">
                 <div class="row" id="article">
-                   <div class="pull-right">
+                   <!-- <div class="pull-right">
                        <img src="/img/filter-img.png" class="img-responsive space-top-img1">
-                   </div>
+                   </div> -->
                    <div class="col-sm-12">
                       <div class="col-md-6 pull-left space-top-detail2">
                        <img src="/img/sm-girl.png" class="img-responsive">
                       </div>
                        <div class="col-md-6 pull-left space-top-detail2">
-                         <h4>Sarah</h4>
-                         <p class="no-margin">07-20-2015</p>
-                         <p class="no-margin">11:16</p>
+                         <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
+
+                         <p class="no-margin"> <!-- {{{getTagList _id}}} --></p>
+                         <p class="no-margin">{{review.date}}</p>
                       </div>
                    </div>
                 </div>
-                <div class="col-sm-12">
-                  <div class="space-comment">
-                     <textarea class="form-control" id="status" name="styled-textarea" rows="7" placeholder="Write what you want ..."></textarea>
-                   </div>
-                   <button class="btn_register pull-right" id="posting" value="{{_"POST"}}"></button>
-                </div>
+                {{#if currentUser}}
+                    <div class="col-sm-12">
+                      <div class="space-comment">
+                         <textarea class="form-control" id="status" name="styled-textarea" rows="7" placeholder="Write what you want ..."></textarea>
+                       </div>
+                       <button class="btn_register pull-right" id="posting">SEND</button>
+                      
+                    </div>
+                {{/if}}
                 <div class="clear-fix"></div>
-                <div class="row">
-                           <div class="col-sm-12">
-                              <div class="col-sm-5 pull-left space-top-detail2">
-                               <img src="/img/sm-girl.png" class="img-responsive">
-                              </div>
-                               <div class="col-sm-5 pull-left space-top-detail2">
-                                 <h4>Sarah</h4>
-                                 <p class="no-margin">07-20-2015</p>
-                                 <p class="no-margin">11:16</p>
-                              </div>
-                              <div class="col-sm-2 pull-right space-top-detail2">
-                               <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
-                              </div>
-                              <div class="col-sm-12">
-                                 <p class="pull-left space-top-detail3">{{#if currentUser}}
-                                  {{>addreview}}
-                                  {{/if}}
-                                  <!--{{#each getReviews review filterReview removeFilter}}-->
-
-                                  {{#each getReviewBySort review}}
-                                  {{>review}}
-                                  {{else}}
-                                  <i>هیچ بررسی</i>
-                                  {{/each}}</p>
-                                 <div class="pull-left border-detail">   
-                                 </div>
-                              </div>
-                           </div>  
-                        </div>
-                        <div class="row">
-                           <div class="col-sm-12">
-                              <div class="col-sm-5 pull-left space-top-detail2">
-                               <img src="/img/sm-girl.png" class="img-responsive">
-                              </div>
-                               <div class="col-sm-5 pull-left space-top-detail2">
-                                 <h4>Sarah</h4>
-                                 <p class="no-margin">07-20-2015</p>
-                                 <p class="no-margin">11:16</p>
-                              </div>
-                              <div class="col-sm-2 pull-right space-top-detail2">
-                               <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
-                              </div>
-                              <div class="col-sm-12">
-                                <p class="pull-left space-top-detail3">
-                                    <h1>{{_ "ARTICLE ABOUT"}}</h1>
-                                  {{#each articles}}
-                                  {{#with getArticle this}}
-                                  {{>article}}
-                                  {{/with}}
-                                  {{else}}
-                                  <i>{{_ "No articles about"}} {{title}}</i>
-                                  {{/each}}</p>
-                                 <div class="pull-left border-detail">   
-                                 </div>
-                              </div>
-                           </div>  
-                        </div>
-
-                        <div class="row">
-                           <div class="col-sm-12">
-                              <div class="col-md-5 pull-left space-top-detail2">
-                               <img src="/img/sm-girl.png" class="img-responsive">
-                              </div>
-                               <div class="col-sm-5 pull-left space-top-detail2">
-                                 <h4>Sarah</h4>
-                                 <p class="no-margin">07-20-2015</p>
-                                 <p class="no-margin">11:16</p>
-                              </div>
-                              <div class="col-sm-2 pull-right space-top-detail2">
-                               <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
-                              </div>
-                              <div class="col-sm-12">
-                                 <p class="pull-left space-top-detail3"><h1>{{_ "Tutorial about"}}</h1>
-
-                              {{#each tutoes}}
-                              {{#with getTutoes this}}
-                              {{>tutoes}}
-                              {{/with}}
-                              {{else}}
-                              <i>{{_ "No tutorial about"}}{{title}}</i> 
-                              {{/each}}</p>
-                                 <div class="pull-left border-detail">   
-                                 </div>
-                              </div>
-                           </div>  
-                        </div>
-
+                 {{#each getReviews review filterReview removeFilter}}
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="col-sm-5 pull-left space-top-detail2">
+                                <img src="img/sm-girl.png" class="img-responsive">
+                            </div>
+                            <div class="col-sm-5 pull-left space-top-detail2">
+                                <h4>Sarah</h4>
+                                <p class="no-margin">07-20-2015</p>
+                                <p class="no-margin">DATE={{review.date}}</p>
+                            </div>
+                            <div class="col-sm-2 pull-right space-top-detail2">
+                                <h3><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>&nbsp;19</h3> 
+                            </div>
+                            <div class="col-sm-12">
+                                <p class="pull-left space-top-detail3">COMMENT={{comment}}</p>
+                                <div class="pull-left border-detail"></div>
+                            </div>
+                        </div>  
+                    </div>
+                 {{/each}} 
                
-           </div>
+               
+            </div>
        </section>
    </article>
 </template>
