--- a/client/Views/App/product/details.html
+++ b/client/Views/App/product/details.html
@@ -83,7 +83,8 @@
                    </div> -->
                    <div class="col-sm-12">
                       <div class="col-md-6 pull-left space-top-detail2">
-                       <img src="/img/sm-girl.png" class="img-responsive">
+                       <!-- <img src="/img/sm-girl.png" class="img-responsive"> -->
+                       <img src="{{getImg currentUser.image}}" class="img-responsive center-block" style="width: 50%;">
                       </div>
                        <div class="col-md-6 pull-left space-top-detail2">
                          <h4>{{#with getprofile}}{{profile.firstname}} {{profile.lastname}}{{/with}}</h4>
