--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -1,7 +1,11 @@
 <template name="headermenu">	
 	<section id="menu-wrapper">
-		<div id="menu-search">
+		<!-- <div id="menu-search">
 			<input id="menu-search-input-text" type="text" placeholder="Search..." />
+		</div> -->
+		<div id="menu-search">
+		   	<span class="input-group-addon search-btn kesearch"><i class="fa fa-search search-font"></i></span>
+		   	<input class="input-search" id="textToSearch" type="text" placeholder="{{_"Search for..."}}" />
 		</div>
 		<ul id="menu-lateral" class="menu">
 			<li>
@@ -97,10 +101,30 @@
 				</li>
 				<!--panel price range -->
 				<div class="panel_price_range">
-					<div class="row">
+					<!-- <div class="row">
 						<span class="pull-left">0 $</span><span class="pull-right">+1000 $</span>
 					</div>
-					<input type="text" class="span2" value="" data-slider-min="0" data-slider-max="1000" data-slider-step="5" data-slider-value="[0,1000]" id="sl2" >
+					<input type="text" class="span2" value="" data-slider-min="0" data-slider-max="1000" data-slider-step="5" data-slider-value="[0,1000]" id="sl2" > -->
+					<div class="pull-right">
+						<div class="checkbox">
+						  	<label><input type="checkbox" value=""> 0 to 700K</label>
+						</div>
+						<div class="checkbox">
+						  	<label><input type="checkbox" value="">700K to 1M</label>
+						</div>
+						<div class="checkbox">
+						  	<label><input type="checkbox" value=""> 1M to 2M</label>
+						</div>
+						<div class="checkbox">
+						  	<label><input type="checkbox" value=""> 2M to 3M</label>
+						</div>
+						<div class="checkbox">
+						  	<label><input type="checkbox" value=""> 3M to 4M</label>
+						</div>
+						<div class="checkbox">
+						  	<label><input type="checkbox" value=""> All</label>
+						</div>
+					</div>
 				</div>
 				<li class="item"><a href="#" id="brands">Brands</a></li>
 				<!-- panel brands -->
